# clone

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_CN.md  build-alpine-image.sh  build-ubuntu-image.sh  build-ubuntu26-image.sh  diagnose.sh  install-systemd.sh  merge-image.sh
.cargo/: config.toml
crates/clone-controller/: Cargo.toml
crates/clone-controller/src/: api.rs  clone_client.rs  config.rs  lib.rs  main.rs  metrics.rs  reconciler.rs  state.rs
crates/clone-init/: Cargo.toml
crates/clone-init/src/: main.rs
crates/guest-agent/src/: main.rs
sdk/clone-mcp/: claude_desktop_config.example.json  requirements.txt  server.py
src/: main.rs  rootfs.rs  rootfs_create.rs
src/boot/: identity.rs  template.rs
src/control/: cgroup.rs  daemon.rs  http.rs  mod.rs  prometheus_metrics.rs  protocol.rs  sync_server.rs
src/memory/: balloon.rs
src/migration/: mod.rs
src/net/: mod.rs  netns.rs
src/storage/: mod.rs
src/virtio/: balloon.rs  block.rs  fs.rs  mmio.rs  mod.rs  net.rs  queue.rs  vsock.rs
src/vmm/: agent_listener.rs  mod.rs  serial.rs  vcpu.rs
