[package]
name = "clone-controller"
version = "0.1.0"
edition = "2021"
description = "Multi-tenant controller for Clone VMM: tenant lifecycle, idle aging, traffic-driven restore"

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
anyhow = "1"
prometheus = "0.13"
lazy_static = "1.5"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[lib]
name = "clone_controller"
path = "src/lib.rs"

[[bin]]
name = "clone-controller"
path = "src/main.rs"
